# poetry-demo

./: README.md  pyproject.toml
.devcontainer/: postCreateCommand.sh
playground/: __init__.py
tests/: test_playground.py
