[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Martin Gran <martgra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
play = 'playground.__init__:run'

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
